# codeblocks-cmake

./: CMakeCache.txt  CMakeLists.txt  Makefile  cbproj.cbp  cbproj.depend  cbproj.layout  cmake_install.cmake  main  main.cpp
staticlib/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  staticlib.cbp  staticlib.depend  staticlib.layout
staticlib/include/: StaticClass.h
staticlib/src/: StaticClass.cpp
